--- a/back-end/templates/index.html
+++ b/back-end/templates/index.html
@@ -8,6 +8,7 @@
     ไง
     {{data.name}} {{data.age}} {{data.height}}
     <ul>
+        <li><img src="//upload.wikimedia.org/wikipedia/en/9/90/CaptainToadtreasuretracker.png"></li>
         <li><a href="/hi">HI</a></li>
         <li><a href="https://en.wikipedia.org/wiki/List_of_best-selling_Nintendo_Switch_video_games#cite_note-Sept2021ConsoleSales-3">Nintendo</a> </li>
     </ul>
